--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
-    <title>Home</title>
+    <title>Undergrounds</title>
 
     <link rel="stylesheet " href="/bootstrap/css/bootstrap.min.css">
     <!--nuvem-->
@@ -55,17 +55,17 @@
                 </div>
             </div>
             <div class="col-lg-8 mx-auto">
-                <p class="text-faded mb-5" style="font-size: 18px;">Existem 3 formas de se resolver um problema, a correta, a errada e a XGH, que é igual à errada, só que mais rápida.<br> Extreme Go Horse de jeito responsável é Underground DEVs!</p><a class="btn btn-xl" role="button" href="#services">Saiba mais</a></div>
+                <p class="text-faded mb-5" style="font-size: 18px;">Existem 3 formas de se resolver um problema, a correta, a errada e a Underground, que é igual à errada, só que mais rápida.<br><br> Extreme Go Horse de jeito responsável é <b>Underground DEVs®!</b></p><a class="btn btn-xl" role="button" href="#about">Saiba mais</a></div>
         </div>
     </header>
     <section id="about" class="bg-primary">
         <div class="container">
             <div class="row">
                 <div class="col offset-lg-8 mx-auto text-center">
-                    <h2 class="text-white section-heading">Nós somos quem você precisa, AGORA!</h2>
+                    <h2 class="text-white section-heading">O lugar onde os jedis de uma galáxia<br>distante se reúnem, cada um com sua força...<br>e juntos... fugindo do império</h2>
                     <hr class="light my-4">
-                    <p class="text-faded mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus <br>hendrerit sem odio, non accumsan mi tempus id. Duis dapibus eleifend <br>placerat. Etiam fermentum ornare ornare.&nbsp;<br></p><a class="btn btn-light btn-xl js-scroll-trigger"
-                        role="button" href="#services">Contate-nos</a></div>
+                    <p class="text-faded mb-4">Underground Devs é a comunidade de desenvolvedores <br>curiosos, sempre tentando construir algo mirabolante. <br>Nosso principal fundamento é nunca desistir!<br>Venha fazer parte!&nbsp;<br></p><a class="btn btn-light btn-xl js-scroll-trigger btn-about"
+                        role="button" href="/about">Nos conheça!</a></div>
             </div>
         </div>
     </section>
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">NÓS GARANTIMOS</h2>
+                    <h2 class="section-heading">NÓS SOMOS O QUE FAZEMOS</h2>
                     <hr class="my-4">
                 </div>
             </div>
@@ -82,102 +82,43 @@
             <div class="row">
                 <div class="col-md-6 col-lg-3 text-center">
                     <div class="mx-auto service-box mt-5"><i class="fa fa-diamond fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-once="true"></i>
+                        <img src="/img/qualidade.png" alt="" width="20%">
+                        <br>
                         <h3 class="mb-3">Qualidade</h3>
-                        <p class="text-muted mb-0">Our templates are updated regularly so they don't break.</p>
+                        <p class="text-muted mb-0">Fazemos o que queremos e lhe damos a maior qualidade.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 text-center">
                     <div class="mx-auto service-box mt-5"><i class="fa fa-paper-plane fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-delay="200" data-aos-once="true"></i>
-                        <h3 class="mb-3">Timing</h3>
-                        <p class="text-muted mb-0">You can use this theme as is, or you can make changes!</p>
+                        <img src="/img/uniao.png" alt="" width="20%">
+                        <h3 class="mb-3">Integração</h3>
+                        <p class="text-muted mb-0">Não nos importamos quem você é, mas quem será!</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 text-center">
                     <div class="mx-auto service-box mt-5"><i class="fa fa-newspaper-o fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-delay="400" data-aos-once="true"></i>
-                        <h3 class="mb-3">Comunicativo</h3>
-                        <p class="text-muted mb-0">We update dependencies to keep things fresh.</p>
+                        <img src="/img/desafio.png" alt="" width="20%">
+                        <h3 class="mb-3">Desafio</h3>
+                        <p class="text-muted mb-0">Juntos, resolveremos os maiores desafios juntos.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 text-center">
                     <div class="mx-auto service-box mt-5"><i class="fa fa-heart fa-4x text-primary mb-3 sr-icons" data-aos="fade" data-aos-duration="200" data-aos-delay="600" data-aos-once="true"></i>
-                        <h3 class="mb-3">Feito com amor</h3>
-                        <p class="text-muted mb-0">You have to make your websites with love these days!</p>
+                        <img src="/img/irmandade.png" alt="" width="20%">
+                        <h3 class="mb-3">Irmandade</h3>
+                        <p class="text-muted mb-0">Uma vez Underground, sempre Underground!</p>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="portfolio" class="p-0">
-        <div class="container-fluid p-0">
-            <div class="row no-gutters popup-gallery">
-                <div class="col-sm-6 col-lg-4">
-                    <a class="portfolio-box" href="assets/img/fullsize/1.jpg"><img class="img-fluid" src="assets/img/thumbnails/1.jpg">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded"><span>Category</span></div>
-                                <div class="project-name"><span>Project Name</span></div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <a class="portfolio-box" href="assets/img/fullsize/2.jpg"><img class="img-fluid" src="assets/img/thumbnails/2.jpg">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded"><span>Category</span></div>
-                                <div class="project-name"><span>Project Name</span></div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <a class="portfolio-box" href="assets/img/fullsize/3.jpg"><img class="img-fluid" src="assets/img/thumbnails/3.jpg">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded"><span>Category</span></div>
-                                <div class="project-name"><span>Project Name</span></div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <a class="portfolio-box" href="assets/img/fullsize/4.jpg"><img class="img-fluid" src="assets/img/thumbnails/4.jpg">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded"><span>Category</span></div>
-                                <div class="project-name"><span>Project Name</span></div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <a class="portfolio-box" href="assets/img/fullsize/5.jpg"><img class="img-fluid" src="assets/img/thumbnails/5.jpg">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded"><span>Category</span></div>
-                                <div class="project-name"><span>Project Name</span></div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <a class="portfolio-box" href="assets/img/fullsize/6.jpg"><img class="img-fluid" src="assets/img/thumbnails/6.jpg">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded"><span>Category</span></div>
-                                <div class="project-name"><span>Project Name</span></div>
-                            </div>
-                        </div>
-                    </a>
                 </div>
             </div>
         </div>
     </section>
     <section class="bg-dark text-white">
         <div class="container text-center">
-            <h2 class="mb-4">Lorem Ipsum!</h2><a class="btn btn-light btn-xl sr-button" role="button" data-aos="zoom-in" data-aos-duration="400" data-aos-once="true" href="#">Download Now!</a></div>
-    </section>
-    <section id="contact">
+            <h2 class="mb-4">Venha ser Underground também!</h2><a class="btn btn-light btn-xl sr-button" role="button" data-aos="zoom-in" data-aos-duration="400" data-aos-once="true" href="#">candidate-se!</a></div>
+            <br>
+            <br>
+            <br>
+            <br>
         <!--player de audio-->
         <div class="single-footer-widget mail-chimp">
             <link rel="stylesheet" href="css/AudioPlayer.css" rel="stylesheet">
@@ -258,38 +199,15 @@
                 </script>
             </div>
             <!--fim do player de audio-->
-
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 mx-auto text-center">
-                        <h2 class="section-heading">Let's Get In Touch!</h2>
-                        <hr class="my-4">
-                        <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-lg-4 ml-auto text-center"><i class="fa fa-phone fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-once="true"></i>
-                        <p>123-456-6789</p>
-                    </div>
-                    <div class="col-lg-4 mr-auto text-center"><i class="fa fa-envelope-o fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-delay="300" data-aos-once="true"></i>
-                        <p><a href="https://mail.google.com/mail/u/3/?tab=wm&ogbl#inbox">underdevs.community@gmail.com</a></p>
-                    </div>
-                </div>
-            </div>
-
-    </section>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
+        </section>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/creative.js"></script>
-    <script src="js/animMenu.js"></script>
-
-    </section>
-
+    <script src="/js/creative.js"></script>
+    <script src="/js/animMenu.js"></script>
 </body>
 
 </html>
