--- a/static/about/index.html
+++ b/static/about/index.html
@@ -50,137 +50,34 @@
             </div>
         </div>
     </nav>
-    
+
     <!-- Section: Team v.1 -->
     <section class="team-section text-center" style="background-image: url('/img/space.gif');float: inline-start;">
-        <!-- Section heading -->
-        <h2 class="h1-responsive font-weight-bold my-5">Nossos Fundadores</h2>
-        <!-- Section description -->
-        <p class="grey-text w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
-        eum porro a pariatur veniam.</p>
-        <!-- Grid row -->
-        <div class="row text-center">
-        <!-- Grid column -->
-        <div class="col-md-2">
-            <div class="avatar mx-auto">
-                <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle z-depth-1" alt="Sample avatar">
+        <div id="team">
+            <div class="profile">
+                <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle" alt="avatar">
+                <h3 class="font-weight-bold mt-4 mb-3">Allan Kardec</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio debitis non perferendis aspernatur amet, sapiente in, explicabo omnis voluptatem quasi impedit nulla, tempora sunt voluptate distinctio eum ea maxime.</p>
             </div>
-            <h3 class="font-weight-bold mt-4 mb-3">Anna Williams</h3>
-            <p class="text-uppercase blue-text"><strong>Graphic designer</strong></p>
-            <p class="grey-text">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
-            adipisci sed quia non numquam modi tempora eius.</p>
-            <ul class="list-unstyled mb-0">
-            <!-- Facebook -->
-            <a class="p-2 fa-lg fb-ic">
-                <i class="fab fa-facebook-f blue-text"> </i>
-            </a>
-            <!-- Twitter -->
-            <a class="p-2 fa-lg tw-ic">
-                <i class="fab fa-twitter blue-text"> </i>
-            </a>
-            <!-- Instagram -->
-            <a class="p-2 fa-lg ins-ic">
-                <i class="fab fa-instagram blue-text"> </i>
-            </a>
-            </ul>
-        </div>
-        <!-- Grid column -->
-        <!-- Grid column -->
-        <div class="col-md-2">
-            <div class="avatar mx-auto">
-            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle z-depth-1"
-                alt="Sample avatar">
-            </div>
-            <h3 class="font-weight-bold mt-4 mb-3">John Doe</h3>
-            <p class="text-uppercase blue-text"><strong>Web developer</strong></p>
-            <p class="grey-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem ipsa accusantium
-            doloremque rem laudantium totam aperiam.</p>
-            <ul class="list-unstyled mb-0">
-            <!-- Facebook -->
-            <a class="p-2 fa-lg fb-ic">
-                <i class="fab fa-facebook-f blue-text"> </i>
-            </a>
-            <!-- Instagram -->
-            <a class="p-2 fa-lg ins-ic">
-                <i class="fab fa-instagram blue-text"> </i>
-            </a>
-            </ul>
-        </div>
-        <!-- Grid column -->
-        <!-- Grid column -->
-        <div class="col-md-2">
-            <div class="avatar mx-auto">
-            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="rounded-circle z-depth-1"
-                alt="Sample avatar">
-            </div>
-            <h3 class="font-weight-bold mt-4 mb-3">Maria Smith</h3>
-            <p class="text-uppercase blue-text"><strong>Photographer</strong></p>
-            <p class="grey-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-            mollit anim est fugiat nulla id eu laborum.</p>
-            <ul class="list-unstyled mb-0">
-            <!-- Facebook -->
-            <a class="p-2 fa-lg fb-ic">
-                <i class="fab fa-facebook-f blue-text"> </i>
-            </a>
-            <!-- Instagram -->
-            <a class="p-2 fa-lg ins-ic">
-                <i class="fab fa-instagram blue-text"> </i>
-            </a>
-            <!-- Dribbble -->
-            <a class="p-2 fa-lg ins-ic">
-                <i class="fab fa-dribbble blue-text"> </i>
-            </a>
-            </ul>
-        </div>
-        <!-- Grid column -->
-        <!-- Grid column -->
-        <div class="col-md-2">
-            <div class="avatar mx-auto">
-            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(32).jpg" class="rounded-circle z-depth-1"
-                alt="Sample avatar">
-            </div>
-            <h3 class="font-weight-bold mt-4 mb-3">Tom Adams</h3>
-            <p class="text-uppercase blue-text"><strong>Backend developer</strong></p>
-            <p class="grey-text">Perspiciatis repellendus ad odit consequuntur, eveniet earum nisi qui consectetur
-            totam officia voluptates perferendis voluptatibus aut.</p>
-            <ul class="list-unstyled mb-0">
-            <!-- Facebook -->
-            <a class="p-2 fa-lg fb-ic">
-                <i class="fab fa-facebook-f blue-text"> </i>
-            </a>
-            <!-- Github -->
-            <a class="p-2 fa-lg ins-ic">
-                <i class="fab fa-github blue-text"> </i>
-            </a>
-            </ul>
-        </div>
 
-        <div class="col-md-2">
-            <div class="avatar mx-auto">
-            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(32).jpg" class="rounded-circle z-depth-1"
-                alt="Sample avatar">
+            <div class="profile">
+                <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle" alt="avatar">
             </div>
-            <h3 class="font-weight-bold mt-4 mb-3">Tom Adams</h3>
-            <p class="text-uppercase blue-text"><strong>Backend developer</strong></p>
-            <p class="grey-text">Perspiciatis repellendus ad odit consequuntur, eveniet earum nisi qui consectetur
-            totam officia voluptates perferendis voluptatibus aut.</p>
-            <ul class="list-unstyled mb-0">
-            <!-- Facebook -->
-            <a class="p-2 fa-lg fb-ic">
-                <i class="fab fa-facebook-f blue-text"> </i>
-            </a>
-            <!-- Github -->
-            <a class="p-2 fa-lg ins-ic">
-                <i class="fab fa-github blue-text"> </i>
-            </a>
-            </ul>
+
+            <div class="profile">
+                <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle" alt="avatar">
+            </div>
+
+            <div class="profile">
+                <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle" alt="avatar">
+            </div>
+            <div class="profile">
+                <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle" alt="avatar">
+            </div>
+
         </div>
-        <!-- Grid column -->
-        </div>
-        <!-- Grid row -->
-  </section>
-  <!-- Section: Team v.1 -->
+    </section>
+    <!-- Section: Team v.1 -->
 
     <script src="/js/jquery.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
@@ -191,13 +88,34 @@
     <script src="/js/creative.js"></script>
     <script src="/js/animMenu.js"></script>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- Footer -->
     <footer id="footer" class="footer-1">
         <div class="main-footer widgets-dark typo-light">
-                        <div class="col-md-12 text-center">
-                            <p>Copyright Underground DEVs © 2020. All rights reserved.</p>
-                        </div>
+            <div class="col-md-12 text-center">
+                <p>Copyright Underground DEVs © 2020. All rights reserved.</p>
             </div>
+        </div>
     </footer>
     <!-- Footer -->
 
