--- a/static/error/404.html
+++ b/static/error/404.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Erro 404</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-    <!--nuvem-->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800 ">
-    <!--nuvem-->
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic ">
-    <link href="fonts/font-awesome.min.css ">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
-    <link rel="stylesheet " href="/css/style.css" media="all">
-    <!--icone do site-->
-    <link rel="icon" href="img/icon.png">
+	<title>Not Found</title>
+
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:700,900" rel="stylesheet">
+
+	<!-- Custom stlylesheet -->
+	<link type="text/css" rel="stylesheet" href="/css/404.css" />
+	<link rel="stylesheet " href="/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet " href="/css/style.css" media="all">
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+
 </head>
 
-<body id="page-top">
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav" style="background-color: rgba(142,15,242,0.51); height: 6rem;" onmouseover="c3()">
+<body>
+	<nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav" style="background-color: rgba(142,15,242,0.9); height: 6rem;" onmouseover="c3()">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="/" style="color: rgb(237,237,237);"><img id='slogan' src="/img/underground-slogan.png" alt=""></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#about">SOBRE</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="../about/">SOBRE</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services">BLOG</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#portfolio">SERVIÇOS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">CONTATO</a></li>
@@ -33,40 +39,19 @@
             </div>
         </div>
     </nav>
-    <p>Erro:</p>
-    <h1>404</h1>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/creative.js"></script>
-    <script src="js/animMenu.js"></script>
-</body>
-<style>
-    h1 {
-        font-size: 20rem;
-        top: 10rem;
-        position: relative;
-        text-align: center;
-        color: rgb(142, 15, 242);
-        line-height: 0%;
-    }
-    
-    p {
-        position: relative;
-        text-align: center;
-        color: rgb(179, 179, 179);
-        margin: 0px;
-        top: 5rem;
-        font-size: 10rem;
-    }
-    
-    body {
-        background: rgb(255,255,255);
-        background: linear-gradient(0deg, rgb(192, 192, 192) 0%, rgb(0, 0, 0) 100%);
-    }
-</style>
+
+	<div id="notfound">
+		<div class="notfound">
+			<div class="notfound-404">
+				<h1>404</h1>
+				<h2>Página não encontrada</h2>
+			</div>
+			<br>
+			<br>
+			<a href="/">Página inicial</a>
+		</div>
+	</div>
+
+</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
 </html>
